@@ -64,6 +64,7 @@
 37. Scale image in lyrics view if it is less than 300x300px
 38. Allow to move streams to different categories via drag-n-drop.
 39. Read/write device cache files in non-gui thread.
+40. Add option to save streams in mpd folder.
 
 0.9.2
 -----
